2008-04-09  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - fix more Windows layout test regressions from the font-weight patch 

        The patch silently introduced the ability to select some fonts 
        by their full name on Windows. Firefox and IE allow the same.
        This made these tests use different, Windows-only fonts on
        Windows. The patch removes references to these fonts from the 
        tests.

        * tables/mozilla/bugs/bug4093.html:
        * tables/mozilla/bugs/bug43854-1.html:
        * tables/mozilla/bugs/bug8381.html:
        * tables/mozilla/core/bloomberg.html:

2008-04-09  Brady Eidson  <beidson@apple.com>

        Reviewed by Adam Roben

        Per the HTML5 spec, enumerating a Storage object should walk the keys in the storage area, 
        and should not return the built-in properties.

        This test adds some keys to sessionStorage, enumerates the sessionStorage object, and logs 
        the sorted result.  It should *not* contain the built in properties of the Storage object

        * storage/domstorage/sessionstorage/enumerate-storage-expected.txt: Added.
        * storage/domstorage/sessionstorage/enumerate-storage.html: Added.

2008-04-08  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Adam

        * platform/win/Skipped: SessionStorage tests pass fine on Windows, as long as the feature is enabled!

2008-04-08  Dan Bernstein  <mitz@apple.com>

        Reviewed by Antti Koivisto.

        - test for http://bugs.webkit.org/show_bug.cgi?id=18172
          REGRESSION (r31114-31132): Page renders structured almost horizontally (at flickr.com)

        * fast/block/float/br-with-clear-2.html: Added.
        * platform/mac/fast/block/float/br-with-clear-2-expected.checksum: Added.
        * platform/mac/fast/block/float/br-with-clear-2-expected.png: Added.
        * platform/mac/fast/block/float/br-with-clear-2-expected.txt: Added.
